# cltj

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md  baseline.txt  out-final.txt  out.txt  out2.txt  out3.txt  out4.txt  p1351.txt  p335.txt  p336.txt  p363.txt  p518.txt  p845.txt  plot.py  refactoring.csv  ring-large.out  test.sh
Queries/: Queries-bgps-limit1000.txt  Queries-bgps-type1-2.txt  Queries-bgps-type3.txt  Queries-wikidata-benchmark.txt  type1.Queries-bgps-limit1000.txt  type2.Queries-bgps-limit1000.txt  type3.Queries-bgps-limit1000.txt  types.txt
analysis/: analyse_results.ipynb  pyproject.toml
analysis/alternation_complexity/: algorithm_design.ipynb  alternation_complexity.py  test_cases.py  visualization.py
analysis/complexity_distribution_analysis/: analyse_results.ipynb  plot_utils.py
analysis/hashing/: mphf_hashing_analysis.ipynb  mphf_hashing_analysis.py
cmp/: compareResults  milldb.csv  rdfcsa.time.csv  ring.csv
csv/: boxplots-nolimit.py  boxplots-type3.py  boxplots.py  describe-all.py  describe.py  join-files.py  map-type12.txt  map-type3.txt  plot-diff.py  results-ltj-organizados  split-queries.py  split-types.py  types.txt
csv/adaptive/: c-ring.time.csv  c-uring.time.csv  crdfcsa.time.csv  ring.time.csv  type1.c-ring.time.csv  type1.c-uring.time.csv  type1.crdfcsa.time.csv  type1.rdfcsa.time.csv  type1.ring.time.csv  type1.uring.time.csv  type2.c-ring.time.csv  type2.c-uring.time.csv  type2.crdfcsa.time.csv  type2.rdfcsa.time.csv  type2.ring.time.csv  type2.uring.time.csv  type3.c-ring-muthu.time.csv  type3.c-ring.time.csv  type3.c-uring-muthu.time.csv  type3.c-uring.time.csv  type3.crdfcsa.time.csv  type3.rdfcsa.time.csv  type3.ring-muthu.time.csv  type3.ring.time.csv  type3.uring-muthu.time.csv  type3.uring.time.csv  uring.time.csv
csv/fixed/: c-ring.fixed.time.csv  c-uring.fixed.time.csv  crdfcsa.fixed.time.csv  rdfcsa.fixed.time.csv  ring.fixed.time.csv  type1.c-ring.fixed.time.csv  type1.c-uring.fixed.time.csv  type1.crdfcsa.fixed.time.csv  type1.rdfcsa.fixed.time.csv  type1.ring.fixed.time.csv  type1.uring.fixed.time.csv  type2.c-ring.fixed.time.csv  type2.c-uring.fixed.time.csv  type2.crdfcsa.fixed.time.csv  type2.rdfcsa.fixed.time.csv  type2.ring.fixed.time.csv  type2.uring.fixed.time.csv  type3.c-ring-muthu.fixed.time.csv  type3.c-ring.fixed.time.csv  type3.c-uring-muthu.fixed.time.csv  type3.c-uring.fixed.time.csv  type3.crdfcsa.fixed.time.csv  type3.rdfcsa.fixed.time.csv  type3.ring-muthu.fixed.time.csv  type3.ring.fixed.time.csv  type3.uring-muthu.fixed.time.csv  type3.uring.fixed.time.csv  uring.fixed.time.csv
csv/type3/: boxplots-type3.py  type3.cltj.1000.time.csv  type3.ring.best.1000.time.csv  type3.ring.fixed.1000.time.csv  type3.ring.random-lonely-est.1000.time.csv  type3.ring.random-lonely.1000.time.csv  type3.ring.random.1000.time.csv
data/: c-ring-small.out  cltj-adap.csv  cltj-star-adap.csv  cltj-star.csv  cltj.csv  data.txt  data.txt.cltj  f-ring-small.out  q1.tsv  q3.tsv  ring-1.csv  ring-small.out  ring.csv
data/proba/: info.txt  order0.B  order0.IV  order1.B  order1.IV  order2.B  order2.IV  order3.B  order3.IV  order4.B  order4.IV  order5.B  order5.IV
include/: LeapfrogOP.hpp  Readme  bwt.hpp  bwt_interval.hpp  cltj.hpp  cltj_compact_trie.hpp  cltj_compact_trie_dyn.hpp  cltj_compact_trie_dyn_v2.hpp  cltj_compact_trie_iv.hpp  cltj_compact_trie_iv_iterator.hpp  cltj_compact_trie_v2.hpp  cltj_compact_trie_v3.hpp  cltj_config.hpp  cltj_helper.hpp  cltj_index.hpp  cltj_index_spo.hpp  cltj_index_spo_basic.hpp  cltj_index_spo_dyn.hpp  cltj_index_spo_lite.hpp  cltj_index_spo_v2.hpp  cltj_iterator.hpp  cltj_parser.hpp  cltj_regular_trie.hpp  cltj_regular_trie_v2.hpp  cltj_table_indexing.hpp  cltj_term.hpp  cltj_trie_interface.hpp  cltj_tuple.hpp  cltj_uncompact_trie.hpp  cltj_uncompact_trie_v2.hpp  cltj_utils.hpp  configuration.hpp  dict_map.hpp  dyn_array.hpp  dyn_bit_vector.hpp  dyn_louds.hpp  file.hpp  gao.hpp  gao_adaptive.hpp  gao_adaptive_v2.hpp  (+32 more)
include/api/: cltj_dyn_ids.hpp  cltj_dyn_rdf.hpp  cltj_ids.hpp  cltj_rdf.hpp  cltj_static_ids.hpp
include/cds/: dyn_array.hpp  dyn_bit_vector.hpp  dyn_louds.hpp  succ_support_v.hpp
include/dict/: dict_map.hpp  pfc.hpp
include/hashing/: key_policies.hpp  mphf_bdz.hpp  mphf_g_storage.hpp  mphf_types.hpp  mphf_utils.hpp
include/index/: cltj_index_metatrie.hpp  cltj_index_metatrie_dyn.hpp  cltj_index_spo_basic.hpp  cltj_index_spo_dyn.hpp  cltj_index_spo_lite.hpp
include/metatrie/: cltj_compact_metatrie.hpp  cltj_compact_metatrie_dyn.hpp
include/query/: alternation_complexity.hpp  intersection_stats.hpp  (+4 more)
lib/hybridBV/: CMakeLists.txt  FACTOR  makefile
lib/hybridBV/include/hybridBV/: basics.h  hybridBV.h  hybridBVId.h  hybridId.h  leafBV.h  leafBVId.h  leafId.h  staticBV.h  staticBVId.h
lib/hybridBV/src/hybridBV/: basics.c  hybridBV.c  hybridBVId.c  hybridId.c  leafBV.c  leafBVId.c  leafId.c  staticBV.c  staticBVId.c
old/: Iterator.hpp  LeapfrogOP.hpp
plots/: bgps.xlsx  plot.py  refactoring.csv  refactoring.numbers
results/: base  benchmark-paths.xlsx  closure-experiments.xlsx  cltj.v3.csv  cltj.v4.csv  compare-type1-2.py  compare-type3.py  filter-type1-2.py  nova-version.xlsx  plot-diff.py  ring.csv  ring.large.csv  ring.large.txt  ring.large.v2.csv  ring.largev2.txt  ring.out  ring.q685.txt  uring.csv  uring.large.csv  uring.large.txt  uring.large.v2.csv  uring.largev2.txt  uring.out  uring.q685.txt
src/: build-index-bulk-triples.cpp  build-index-dyn.cpp  build-index-random.cpp  build-index-triples.cpp  build-index-uring.cpp  build-index.cpp  build-metatrie-index-dyn.cpp  build-metatrie-index.cpp  build-uncltj-index.cpp  check.cpp  check_veo.cpp  dyn-exp1-metatrie.cpp  dyn-exp1.cpp  dyn-exp2.cpp  dyn-exp3.cpp  interactive-metatrie.cpp  main.cpp  prepare-80.cpp  proba.cpp  query-index-triples.cpp  query-index-uring.cpp  query-index.cpp  query-metatrie-index.cpp  query-uncltj-index.cpp  test-bulk-load.cpp  test-dict.cpp  test-index-dyn.cpp  test-index-static.cpp  test-louds.cpp  test-mt-dyn.cpp  update-index-triples.cpp
(+307 files in other folders)
